Fix disconnect when sending large chat messages; add message too long error message for messages too large for F-Chat. (#94)

--- a/browser/mainapp/styles/components/ChannelMessageCollectionView-import.css
+++ b/browser/mainapp/styles/components/ChannelMessageCollectionView-import.css
@@ -500,6 +500,11 @@
             & .character-status-spacer { display: none; }
             & .character { display: none; }
             & .character-spacer { display: none; }
+            
+            & .timestamp { 
+                margin-top: 5px; 
+                margin-left: -18px; 
+            }
 
             & .message-content.emote,
             & .message-content.roll,
